traces/bug_816.txt
src/fflib/problem.cpp:1970: error: DEAD_STORE
  The value written to &pThdi (type Fem2D::Mesh3 const *) is never used.
Showing all 1 steps of the trace


src/fflib/problem.cpp:1970:7: Write of unused value
1968.         
1969.         const CDomainOfIntegration & di= *b->di;
1970.         const Mesh3 * pThdi = GetAny<pmesh3>( (* di.Th)(stack));
              ^
1971.         SHOWVERB(cout << " FormBilinear () " << endl);
1972.         //MatriceElementaireSymetrique<R> *mates =0;
